Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "def attendance(advertising):\n",
-    "    def y()\n",
+    "    def y9\n",
     "    pass"
    ]
   },
