Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -39,7 +39,8 @@
    "outputs": [],
    "source": [
     "def attendance(advertising):\n",
-    "    def y9\n",
+    "    def y(x):\n",
+    "        \n",
     "    pass"
    ]
   },
