Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "def attendance(advertising):\n",
     "    def y(x):\n",
-    "        \n",
+    "        return 3*x\n",
     "    pass"
    ]
   },
