Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -39,8 +39,7 @@
    "outputs": [],
    "source": [
     "def attendance(advertising):\n",
-    "    return (3/2)*advertising + 20\n",
-    "    pass"
+    "    return (3/2)*advertising"
    ]
   },
   {
