--- a/index.ipynb
+++ b/index.ipynb
@@ -100,7 +100,7 @@
    "outputs": [],
    "source": [
     "def attendance_with_friends(advertising):\n",
-    "    return (1.5)\n",
+    "    return (1.5)*advertising+2\n",
     "    pass"
    ]
   },
